--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 .card-wrapper {
   margin-bottom: 12px;
 }
+
 .card {
   display: flex;
   flex-direction: column;
@@ -14,11 +15,13 @@
 }
 
 .card-img-top {
-  flex: 0 0 auto; /* Ensure image doesn't grow or shrink */
+  flex: 0 0 auto;
+  /* Ensure image doesn't grow or shrink */
 }
 
 .card-body {
-  flex: 1 0 auto; /* Allow card body to grow */
+  flex: 1 0 auto;
+  /* Allow card body to grow */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -33,61 +36,73 @@
 }
 
 .card-title {
-  margin-bottom: 10px; /* Space between title and button */
-}
-
-.btn-primary {
-  margin-top: auto; /* Push button to the bottom of the card */
-}
-.card-title {
+  margin-bottom: 10px;
+  /* Space between title and button */
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2; /* Limit to 3 lines */
+  -webkit-line-clamp: 2;
+  /* Limit to 3 lines */
   overflow: hidden;
   text-overflow: ellipsis;
   height: 40px;
 }
+
+.btn-primary {
+  margin-top: auto;
+  /* Push button to the bottom of the card */
+}
+
 .badge {
   max-width: 100%;
   font-size: 0.7rem;
 }
+
 .page-item {
   cursor: pointer;
 }
+
 a {
   text-decoration: none;
   color: #333;
 }
+
 h5 {
   font-size: 1rem;
 }
+
 .page-link {
   color: #444;
 }
+
 .page-link:hover {
   color: #000;
 }
-.active > .page-link,
+
+.active>.page-link,
 .page-link.active {
   background: #000;
   border: #000;
 }
+
 .card img {
   opacity: 0.6;
 }
 
-.card img:hover {
+.card_img_link:hover {
   opacity: 9.9;
 }
+
 .light {
   color: #fff;
   text-align: center;
   padding-top: 12px;
 }
-.error{
+
+.error {
   font-size: 0.8rem;
 }
-.avatar{
+
+.avatar {
   height: 40px;
   width: 40px;
   border-radius: 50px;
